feat(rredux): store for product, website configs and filter

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_RESTAURANT_DATA_API="https://cdn-dev.preoday.com/challenge/venue/9"
+NEXT_PUBLIC_MENU_DATA_API="https://cdn-dev.preoday.com/challenge/menu"
